--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <title>Flexing your muscles</title>
   <meta name="viewport" content="width=device-width,initial-scale=1">
-  <link href="main.css" rel="stylesheet">
+  <link href="css/main.css" rel="stylesheet">
 </head>
 <body>
   <footer class="footer">
@@ -29,7 +29,7 @@
     <ul class="social">
       <li><a href="#"><img src="images/instagram.svg" alt="Instagram"></a></li>
       <li><a href="#"><img src="images/facebook.svg" alt="Facebook"></a></li>
-      <li><a href="#"><img src="images/youtube.svg" alt="Youtube"></a></li>
+      <li><a href="#"><img src="images/youtube.svg" alt="YouTube"></a></li>
     </ul>
     <small class="copyright">© Protein Power House</small>
   </footer>
